# filesharing

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  tsconfig.json
.github/: FUNDING.yml
.sqlx/: query-008d7a485f02bc83c7bf7946e0f5d13740802d09b760d4875c993223cd662e95.json  query-01a3e62c439ce2e1c43c6f46419b5be71af7ad245dae7eb85cb5f18204e4e543.json  query-09add358d502b5faa933bee343a4adfe85ae26ebdf357a693cb4c0a6b982c022.json  query-0c947db1818e7e5231c3056ceb13c210f849ed43ba3d96eda55a8a05e5c7cf72.json  query-0f6b1342ce0da807541e666f0334dcad89ccddef658063701231ddd1eb54c4a4.json  query-2bc4ea5c5d5cf7c5e896c495c615c5add3a8d6ed1bdeb9fecb00abb7199ad306.json  query-33d6944cb95f7e834b278f8a530cd4cc6bc808bcd6b948a50217533df629f59b.json  query-4aee93f72ea0df367c241e10b42e9a3f919b29271856b7d99f4597c6d8b0cac2.json  query-4f97efda9b179c9ce1460418afa8348e65dcc1fe2fd03f3b5a716bc87af861b6.json  query-563ee1fd0eb83156e0b003d90ecc71f0a73c1108a6ff316d631f33f42a228e34.json  query-5af8a5a872e47413e6ee1f7e066938adb5f8ef5e6723e624dd1a175675ad0648.json  query-5f47fab5802daa35cba2de1a111de3ac3b1a38be16070291bae6101dfce81c48.json  query-60e259f53e20f2e4d38e15860dbdeb9e18a826b6eb33e383012517eab0a55b13.json  query-651eeff09e92a0b3b38782b109fc9a196452284ada4121d67206ffed69c89d9f.json  query-6c40b0ac8b7627bf2b196f96d57a5d5986af3024a0a232f76ce5155c1e3641ce.json  query-7690634de9bacf5a21dec03a81054e947289d580ee9b0675ca09250a5a27f243.json  query-7820b21d81d57f595eec81457297d6dcb27c9258f9851a5ac02dacecf3c5e501.json  query-81d7d1eaf399bc36399ca7448cb43870679aa4333dbbdac33a0e95512de66363.json  query-8971adc70d6767c0da7370f5903928b61a5e4cbf58224bc8e1f43111e9a29c79.json  query-8a743eb1202b23a33d466c9b7f5bfa8777535222602f8a719bc61a112ea65052.json  query-9c0349ef9253022a8eb18127614193e729553acb1fb85baadb33d386dae6826b.json  query-a2c624a66b1999281d3b63e85b77785d0aae8d5ebc4865b7d42d7afd81e6f58c.json  query-ad2ed9efcf28c5ee8c6c6fb699ad64387c29e1e45348374253e8f6d63b58f439.json  query-b67bc7a7714ff9225054eab793c4b69bdbb70cfb8ddbc34247fc8f6097a105a6.json  query-b7d8370f4a4a130d1f1b582a5948891b096969a9cdf7119b5a218680519ac130.json  query-bec6e7b46fd4b747cada9b5e1f70b6018863cbde916fa7f2f52ad4f67246421d.json  query-bf5d690dfc9a33b4ce73408a71c7e05610a04de161d81e3769db9b4b1ad2c8f1.json  query-d2f984edd6fa0c29462b419fbe642d9afcce44be4439ac044d0f5b88c0de9525.json  query-d36b1f28ff5b7ac2568e948f2a2ba822f25199590fbd9cccbcf29f7d689f81dd.json  query-dbc0f9a7bb76a28f6611a53937e3d5ce766bb166712d2a8ed9f02c02d7ced7ab.json  query-e439145af3db0ccb2950176b1886c648f89ef1669463ed67709a509a25b1a32e.json  query-ea9f310ce0637c31df01e2f0f9cd659c65b932b130637d9fe017a0c22b3e15e0.json  query-eb94f228b23f9c35c2628a4afdbc752e8dafd9d4193dc98540771d52baeffe91.json  (+1 more)
src/: main.rs  (+1 more)
(+84 files in other folders)
