[package]
name = "filesharing"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.8", features = ["multipart", "headers"] }
axum-auth = "0.4.0"
bcrypt = "0.14.0"
dotenvy = "0.15.6"
futures = "0.3.26"
http-auth-basic = "0.3.3"
lazy_static = "1.4.0"
maud = { version = "0.24.0", features = ["axum"] }
mime_guess = "2.0.4"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ['runtime-tokio-native-tls', "sqlite", "chrono"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower-http = { version = "0.4.0", features = ["fs"] }
# typed-html = "0.2.2"
uuid = { version = "1.3.0", features = ["v4"] }
