[package]
name = "filesharing"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = ["multipart", "macros"] }
axum-auth = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie", "typed-header"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.6"
futures = "0.3.26"
http-auth-basic = "0.3.3"
jsonwebtoken = "9.3.1"
lazy_static = "1.4.0"
maud = { version = "0.27.0", features = ["axum"] }
mime_guess = "2.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ['runtime-tokio-native-tls', "sqlite", "chrono"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower-http = { version = "0.6.2", features = ["fs"] }
# typed-html = "0.2.2"
uuid = { version = "1.3.0", features = ["v4"] }
